# Crawler-SNA

./: README.md
camera_calibration/: Camera Calibration Grid.docx  README.md  calibration.py  dist.npy  mtx.npy
exps/: README.md
nano_ws/: README.md  classes.txt  colors.txt
nano_ws/src/jetson_cam_ros/: CMakeLists.txt  README.md  package.xml
nano_ws/src/jetson_cam_ros/src/: get_file_names.py  segnet_intel02.cpp  simulate_capture_image.cpp
occupancy_grid_tests_p/: README.md
occupancy_grid_tests_p/correct_nano_ogs/: README.md
occupancy_grid_tests_p/occupancy_grid_tests/: README.md  lembretes_imagens.txt  occupancy_grid_correct_nano_ogs.cpp  occupancy_grid_correct_nano_ogs_test.cpp  occupancy_grid_correct_nano_ogs_test_pitch.cpp
ompl_tests/: README.md  benchmark_results_control.py  benchmark_results_geometric.py  files.txt  lembretes_params.txt  visualize_solution_all.py
ompl_tests/analyse_results/: __init__.py  benchmark_results_functions.py
ompl_tests/databases/: benchmark3.db
ompl_tests/tables/: rrtc.txt  rrtg.txt  rrtstar.txt  sst.txt
ompl_tests/tests/: README.md  benchmark_test5_rrtg_rrt_star.cpp  benchmark_test6_rrtc_sst.cpp  benchmark_test7_sst.cpp  benchmark_test7_sst_copy_bad_params.cpp  get_info.py  (+2 more)
rasp_skel_gs_plan/: README.md  client_send_ogs_checkpoints.cpp  exp_read_plan_results_and_plot.py  exp_read_skel_gs_results_and_plot.py  read_plan_results_and_plot.py  read_skel_gs_results_and_plot.py  skel_gs_plan.cpp  skel_gs_plan.h
skeletonize_and_goal_state_tests/: README.md  client_send_ogs_checkpoints.cpp  read_og_info_and_send.py  read_results_and_plot.py  read_skeleton_and_define_gs_all.cpp  skeletonize_and_define_gs.h  skeletonize_and_define_gs_all.py  skeletonize_and_define_gs_all_opt.cpp  skeletonize_and_define_gs_socket.cpp  skeletonize_and_define_gs_socket_threads.cpp  skeletonize_and_send_skeleton.py  skeletonize_tests_time_and_good_plot.py
(+121 files in other folders)
